--- a/wav-decode/index.html
+++ b/wav-decode/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" />
+  </head>
   <body>
     <select song>
       <option value="https://dev.cczu.edu.cn/~ntzyz/audio_context/audio4.wav">FELT - inside (19.1MB)</option>
