--- a/wav-decode/index.html
+++ b/wav-decode/index.html
@@ -19,6 +19,8 @@
     <button onclick="if (wav) wav.sampleingInterval = document.querySelector('input[interval]').value; ">Update</button>
     <div frame></div>
     <canvas width="500" height="300" style="width: 500px; height: 300px; border: 1px solid black">Ahhh please use a better browser.</canvas>
+    <br>
+    <a href="https://github.com/ntzyz/playground/blob/master/wav-decode/main.js" target="_blank">View source on GitHub.</a>
     <script src="main.js"></script>
   </body>
 </html>
