--- a/websocket-terminal/index.html
+++ b/websocket-terminal/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <style>
+      body {
+        margin: 1em;
+        background: black;
+      }
+    </style>
   </head>
   <body>
     <div id="terminal"></div>
