--- a/wav-decode/index.html
+++ b/wav-decode/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <select song>
-      <option value="https://dev.cczu.edu.cn/~ntzyz/audio_context/audio4.wav">FELT - inside (19.1MB)</option>
-      <option value="https://dev.cczu.edu.cn/~ntzyz/audio_context/audio3.wav">人と事象が巡り逢う确率についての朝の考察 (20.4 MB)</option>
-      <option value="https://dev.cczu.edu.cn/~ntzyz/audio_context/audio.wav">DECO*27 - リバーシブル・キャンペーン (29.7 MB)</option>
-      <option value="https://dev.cczu.edu.cn/~ntzyz/audio_context/audio2.wav">Halsey - Castle (46.7 MB)</option>
+      <option value="https://www.ntzyz.cn/audio4.wav">FELT - inside (19.1MB)</option>
+      <option value="https://www.ntzyz.cn/audio3.wav">人と事象が巡り逢う确率についての朝の考察 (20.4 MB)</option>
+      <option value="https://www.ntzyz.cn/audio.wav">DECO*27 - リバーシブル・キャンペーン (29.7 MB)</option>
+      <option value="https://www.ntzyz.cn/audio2.wav">Halsey - Castle (46.7 MB)</option>
     </select>
     <button start>start</button>
     <span status>Ready ... </span>
